--- a/src/components/contactCard/ContactCard.scss
+++ b/src/components/contactCard/ContactCard.scss
@@ -1,7 +1,7 @@
 .ContactCard {
     border: 1px solid rgb(158, 157, 157);
     border-radius: 20px;
-    max-width: 300px;
+    width: 300px;
 
     .contactcard-container {
         padding-block: 10px;
@@ -25,11 +25,20 @@
             display: flex;
             width: 80%;
             justify-content: space-between;
+
+            .delete-icon:hover {
+                background-color: red;
+                color: rgb(255, 255, 255);
+            }
+
+            .edit-icon:hover {
+                background-color: rgba($color: #000000, $alpha: 0.5);
+            }
         }
     }
 }
 
 .ContactCard:hover {
-    background-color: rgb(238, 238, 238);
+    background-color: rgba($color: #b3b0b0, $alpha: 0.1);
     color: black;
 }
