--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,10 @@ code {
   cursor: pointer;
   transition-duration: 0.2s;
 }
+
+.btn-secondary {
+  border: none;
+  padding: 10px 30px;
+  border-radius: 10px;
+  cursor: pointer;
+}
