--- a/src/components/contactCard/ContactCard.scss
+++ b/src/components/contactCard/ContactCard.scss
@@ -1,5 +1,8 @@
 .ContactCard {
-    border: 1px solid rgb(158, 157, 157);
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.4);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(15px);
     border-radius: 20px;
     width: 300px;
 
