--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,5 +1,5 @@
 .Navbar {
-    background-color: rgb(54, 54, 54);
+    background-color: #191717;
     height: 60px;
     color: white;
     
@@ -8,16 +8,23 @@
         justify-content: space-between;
         margin-inline: 20px;
 
-        .middle {
-
-            input {
-                border: none;
-                padding: 8px 10px;
-                border-radius: 6px;
-                outline: none;
+        .left {
+            gap: 40px;
+            h1 {
                 cursor: pointer;
             }
+            .search {
+    
+                input {
+                    border: none;
+                    padding: 8px 10px;
+                    border-radius: 6px;
+                    outline: none;
+                    cursor: pointer;
+                }
+            }
         }
+
 
         .right {
             display: flex;
